--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <model-viewer
-      src="scene.gltf"
-      alt="3D model"
+      src="porsche-logo.glb"
+      alt="Porsche logo 3D model"
       auto-rotate
       camera-controls
       shadow-intensity="1"
